Fix pip3 default path

--- a/installation/python.yaml
+++ b/installation/python.yaml
@@ -3,7 +3,7 @@
 - clean: ['~']
 - pip:
     file: python/requirements.txt
-    binary: /usr/local/bin/pip3
+    binary: /usr/bin/pip3
     user: true
     stdout: true
     stderr: true
