Add local untracked overrides for zshrc #8

--- a/installation/configs.yaml
+++ b/installation/configs.yaml
@@ -44,3 +44,10 @@
     ~/.gitignore_global:
       path: config/gitignore_global
       force: true
+
+  - shell:
+     - command: touch ~/.shell/zshrc_local
+       description: create zsh inclusion for locals
+       stdout: true
+       stderr: true
+
