--- a/installation/configs.yaml
+++ b/installation/configs.yaml
@@ -8,6 +8,16 @@
     stderr: true
 
 - git:
+  "~/.oh-my-zsh/custom/plugins/zsh-autosuggestions/":
+    url: https://github.com/zsh-users/zsh-autosuggestions.git
+    description: zsh auto suggestions
+
+- git:
+  "~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting/":
+    url: https://github.com/zsh-users/zsh-syntax-highlighting.git
+    description: zshu syntax highlighting
+
+- git:
     "~/.oh-my-zsh/custom/plugins/kube-aliases":
       url: https://github.com/Dbz/kube-aliases.git
       description: omzsh kube-aliases
