--- a/installation/brew.yaml
+++ b/installation/brew.yaml
@@ -7,8 +7,9 @@
     stdout: true
     stderr: true
 - shell:
-  - command: source ~/.zshrc
-    description: update env
+  - command: |
+      eval "$(/opt/homebrew/bin/brew shellenv)"
+    description: add homebrew to the PATH
     stdout: true
     stderr: true
 - brewfile:
@@ -16,3 +17,9 @@
     stdout: true
     stderr: true
     include: ['tap', 'brew', 'cask']
+- shell:
+  - command: |
+      source ~/.zshrc
+    description: update env
+    stdout: true
+    stderr: true
