--- a/.github/workflows/lint-github-actions.yaml
+++ b/.github/workflows/lint-github-actions.yaml
@@ -4,12 +4,12 @@ name: Lint GitHub Actions
 
 on:  # yamllint disable-line rule:truthy
   push:
-    branches: [master, main]
+    branches: [main, work, personal]
     paths:
       - ".github/workflows/**.yml"
       - ".github/workflows/**.yaml"
   pull_request:
-    branches: [master, main]
+    branches: [main, work, personal]
     paths:
       - ".github/workflows/**.yml"
       - ".github/workflows/**.yaml"
