--- a/.github/workflows/sanity.yaml
+++ b/.github/workflows/sanity.yaml
@@ -1,7 +1,6 @@
 ---
-
 name: Regular sanity check
-on:
+on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: 21 12 01 */3 *
 
@@ -13,7 +12,7 @@ jobs:
       issues: write
     steps:
       - name: Create sanity check issue
-        run:  |
+        run: |
           if [[ $CLOSE_PREVIOUS == true ]]; then
             previous_issue_number=$(gh issue list \
               --json number \
@@ -41,4 +40,3 @@ jobs:
             - [ ] review & update tools settings in `~/.config`
           PINNED: false
           CLOSE_PREVIOUS: false
-
