Change yamllint github action config

--- a/.github/workflows/lint-yaml.yaml
+++ b/.github/workflows/lint-yaml.yaml
@@ -1,22 +1,21 @@
 ---
-
 name: Lint YAML
 
-on:  # yamllint disable-line rule:truthy
+on: # yamllint disable-line rule:truthy
   push:
     branches: [main, work, personal]
     paths:
-      - '**.yml'
-      - '**.yaml'
-      - '.github/workflows/**.yml'
-      - '.github/workflows/**.yaml'
+      - "**.yml"
+      - "**.yaml"
+      - ".github/workflows/**.yml"
+      - ".github/workflows/**.yaml"
   pull_request:
     branches: [main, work, personal]
     paths:
-      - '**.yml'
-      - '**.yaml'
-      - '.github/workflows/**.yml'
-      - '.github/workflows/**.yaml'
+      - "**.yml"
+      - "**.yaml"
+      - ".github/workflows/**.yml"
+      - ".github/workflows/**.yaml"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -38,17 +37,4 @@ jobs:
         with:
           # All files under base dir
           file_or_dir: "."
-          config_data: |
-            extends: default
-            yaml-files:
-              - '*.yaml'
-              - '*.yml'
-            rules:
-              document-start:
-                level: warning
-              line-length:
-                level: warning
-              new-line-at-end-of-file:
-                level: warning
-              trailing-spaces:
-                level: warning
+          yamllint_config_filepath: ".yamllint"
