Add github token permissions

--- a/.github/workflows/lint-github-actions.yaml
+++ b/.github/workflows/lint-github-actions.yaml
@@ -1,7 +1,9 @@
 ---
 name: Lint GitHub Actions
 
-on:  # yamllint disable-line rule:truthy
+permissions: {}
+
+on:
   push:
     branches: [main, work, personal]
     paths:
