--- a/.github/workflows/lint-yaml.yaml
+++ b/.github/workflows/lint-yaml.yaml
@@ -1,7 +1,9 @@
 ---
 name: Lint YAML
 
-on:  # yamllint disable-line rule:truthy
+permissions: {}
+
+on:
   push:
     branches: [main, work, personal]
     paths:
