Setup macos defaults (#31)
* Bump dotbot from `b8891c5` to `1ee9741`

Bumps [dotbot](https://github.com/anishathalye/dotbot) from `b8891c5` to `1ee9741`.
- [Commits](https://github.com/anishathalye/dotbot/compare/b8891c5fb72485316fba54d2c1310320c9ebf4d5...1ee974113db7eb40f98423857d7372396ab8ebc2)

---
updated-dependencies:
- dependency-name: dotbot
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

* Update lint-github-actions.yaml to run on branches

* Update lint-yaml.yaml to run for branches

* Add justfile for automations

* Add defaults configuration step #24

* Add yamllint and fix all errors

* Change yamllint github action config

* Fix yaml lint errors

* Add github token permissions

* Fix yaml lint action settings

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/.github/workflows/lint-github-actions.yaml
+++ b/.github/workflows/lint-github-actions.yaml
@@ -1,8 +1,9 @@
 ---
-
 name: Lint GitHub Actions
 
-on:  # yamllint disable-line rule:truthy
+permissions: {}
+
+on:
   push:
     branches: [main, work, personal]
     paths:
@@ -43,7 +44,6 @@ jobs:
           ./actionlint -color -shellcheck=
         shell: bash
 
-
   lintGitHubActionsForSecurity:
     runs-on: ubuntu-latest
     timeout-minutes: 15
@@ -70,4 +70,3 @@ jobs:
 
       - name: Run zizmor on GitHub Actions
         run: zizmor .github/workflows/*
-
